// Vitest Snapshot v1

exports[`Form > Form alignVue demo works fine 1`] = `
<t-space
  direction="vertical"
  size="32px"
>
  <t-radio-group
    variant="default-filled"
  >
    <t-radio-button
      value="left"
    >
      左对齐
    </t-radio-button>
    <t-radio-button
      value="right"
    >
      右对齐
    </t-radio-button>
    <t-radio-button
      value="top"
    >
      顶部对齐
    </t-radio-button>
  </t-radio-group>
  <t-form
    data="[object Object]"
    labelalign="right"
    labelwidth="60"
  >
    <t-form-item
      name="name"
    >
      <t-input />
    </t-form-item>
    <t-form-item
      label="密码"
      name="password"
    >
      <t-input
        type="password"
      />
    </t-form-item>
  </t-form>
</t-space>
`;

exports[`Form > Form baseVue demo works fine 1`] = `
<t-form
  colon="true"
  data="[object Object]"
>
  <t-form-item
    label="姓名"
    name="name"
    rules="[object Object]"
  >
    <t-input
      placeholder="请输入内容"
    />
  </t-form-item>
  <t-form-item
    label="手机号码"
    name="tel"
  >
    <t-input
      placeholder="请输入内容"
    />
  </t-form-item>
  <t-form-item
    label="接收短信"
    name="status"
  >
    <t-switch />
  </t-form-item>
  <t-form-item
    label="性别"
    name="gender"
  >
    <t-radio-group>
      <t-radio
        value="1"
      >
        男
      </t-radio>
      <t-radio
        value="2"
      >
        女
      </t-radio>
    </t-radio-group>
  </t-form-item>
  <t-form-item
    label="课程"
    name="course"
  >
    <t-checkbox-group
      options="[object Object],[object Object],[object Object]"
    />
  </t-form-item>
  <t-form-item
    style="margin-left: 100px;"
  >
    <t-space
      size="10px"
    >
      <t-button
        theme="primary"
        type="submit"
      >
        提交
      </t-button>
      <t-button
        theme="default"
        type="reset"
        variant="base"
      >
        重置
      </t-button>
    </t-space>
  </t-form-item>
</t-form>
`;

exports[`Form > Form clearValidateVue demo works fine 1`] = `
<t-form
  data="[object Object]"
  data-v-6f67d4f0=""
  rules="[object Object]"
  scrolltofirsterror="smooth"
>
  <t-form-item
    data-v-6f67d4f0=""
    help="这是用户名字段帮助说明"
    label="用户名"
    name="account"
  >
    <t-input
      data-v-6f67d4f0=""
    />
  </t-form-item>
  <t-form-item
    data-v-6f67d4f0=""
    help="一句话介绍自己"
    label="个人简介"
    name="description"
  >
    <t-input
      data-v-6f67d4f0=""
    />
  </t-form-item>
  <t-form-item
    data-v-6f67d4f0=""
    label="密码"
    name="password"
  >
    <t-input
      data-v-6f67d4f0=""
      type="password"
    />
  </t-form-item>
  <t-form-item
    data-v-6f67d4f0=""
    label="邮箱"
    name="email"
  >
    <t-input
      data-v-6f67d4f0=""
    />
  </t-form-item>
  <t-form-item
    data-v-6f67d4f0=""
    label="性别"
    name="gender"
  >
    <t-radio-group
      data-v-6f67d4f0=""
    >
      <t-radio
        data-v-6f67d4f0=""
        value="male"
      >
        男
      </t-radio>
      <t-radio
        data-v-6f67d4f0=""
        value="female"
      >
        女
      </t-radio>
    </t-radio-group>
  </t-form-item>
  <t-form-item
    data-v-6f67d4f0=""
    label="课程"
    name="course"
  >
    <t-checkbox-group
      data-v-6f67d4f0=""
      options="[object Object],[object Object],[object Object],[object Object]"
    />
  </t-form-item>
  <t-form-item
    data-v-6f67d4f0=""
    label="学院"
    name="college"
  >
    <t-select
      class="demo-select-base"
      clearable=""
      data-v-6f67d4f0=""
    >
      <t-option
        data-v-6f67d4f0=""
        label="计算机学院"
        value="1"
      >
         计算机学院 
      </t-option>
      <t-option
        data-v-6f67d4f0=""
        label="软件学院"
        value="2"
      >
         软件学院 
      </t-option>
      <t-option
        data-v-6f67d4f0=""
        label="物联网学院"
        value="3"
      >
         物联网学院 
      </t-option>
    </t-select>
  </t-form-item>
  <t-form-item
    data-v-6f67d4f0=""
    label="入学时间"
    name="date"
    rules="[object Object]"
  >
    <t-input
      data-v-6f67d4f0=""
    />
  </t-form-item>
  <t-form-item
    data-v-6f67d4f0=""
    label="个人网站"
    name="content.url"
  >
    <t-input
      data-v-6f67d4f0=""
    />
  </t-form-item>
  <t-form-item
    data-v-6f67d4f0=""
    style="margin-left: 100px;"
  >
    <t-space
      data-v-6f67d4f0=""
      size="10px"
    >
      <t-button
        data-v-6f67d4f0=""
        theme="primary"
        type="submit"
      >
         提交 
      </t-button>
      <t-button
        data-v-6f67d4f0=""
        theme="default"
        type="reset"
        variant="base"
      >
         重置 
      </t-button>
      <t-button
        data-v-6f67d4f0=""
        theme="default"
        variant="base"
      >
         清空校验结果 
      </t-button>
      <t-button
        data-v-6f67d4f0=""
        theme="default"
        variant="base"
      >
         清除指定字段的校验结果 
      </t-button>
    </t-space>
  </t-form-item>
</t-form>
`;

exports[`Form > Form customValidatorVue demo works fine 1`] = `
<t-form
  data="[object Object]"
  rules="[object Object]"
>
  <t-form-item
    label="用户名"
    name="account"
  >
    <t-input />
  </t-form-item>
  <t-form-item
    help="同一个校验方法可输出不同的错误信息和类型，依次输入：1234 观察变化"
    label="密码"
    name="password"
  >
    <t-input
      type="password"
    />
  </t-form-item>
  <t-form-item
    help="自定义异步校验方法"
    label="确认密码"
    name="rePassword"
  >
    <t-input
      type="password"
    />
  </t-form-item>
  <t-form-item
    style="margin-left: 100px;"
  >
    <t-space
      size="10px"
    >
      <t-button
        theme="primary"
        type="submit"
      >
        提交
      </t-button>
      <t-button
        theme="default"
        type="reset"
        variant="base"
      >
        重置
      </t-button>
    </t-space>
  </t-form-item>
</t-form>
`;

exports[`Form > Form disabledVue demo works fine 1`] = `
<t-space
  direction="vertical"
  size="32px"
>
  <t-space
    style="margin-left: 36px;"
  >
    <t-checkbox
      variant="default-filled"
    >
       是否禁用表单 
    </t-checkbox>
  </t-space>
  <t-form
    colon=""
    data="[object Object]"
    disabled="true"
    resettype="initial"
  >
    <t-form-item
      label="姓名"
      name="name"
    >
      <t-input />
    </t-form-item>
    <t-form-item
      label="学院"
      name="college"
    >
      <t-select
        clearable=""
        options="[object Object],[object Object],[object Object]"
      />
    </t-form-item>
    <t-form-item
      label="寄件地址"
      name="address1"
    >
      <t-tree-select
        clearable=""
        data="[object Object],[object Object],[object Object]"
      />
    </t-form-item>
    <t-form-item
      label="收件地址"
      name="address2"
    >
      <t-cascader
        clearable=""
        options="[object Object],[object Object],[object Object]"
      />
    </t-form-item>
    <t-form-item
      label="日期"
      name="date"
    >
      <t-date-picker
        clearable=""
        mode="date"
      />
    </t-form-item>
    <t-form-item
      label="个人简介"
      name="personalProfile"
    >
      <t-textarea
        clearable=""
        placeholder="简单描述自己的经历"
      />
    </t-form-item>
    <t-form-item
      label="短信"
      name="message"
    >
      <t-switch
        label="接受,不接"
      />
    </t-form-item>
    <t-form-item
      label="性别"
      name="gender"
    >
      <t-radio-group>
        <t-radio
          value="1"
        >
          男
        </t-radio>
        <t-radio
          value="2"
        >
          女
        </t-radio>
      </t-radio-group>
    </t-form-item>
    <t-form-item
      label="课程"
      name="course"
    >
      <t-checkbox-group
        options="[object Object],[object Object],[object Object]"
      />
    </t-form-item>
    <t-form-item
      label="绩点"
      name="gradePoint"
    >
      <t-input-number
        placeholder="数字"
      />
    </t-form-item>
    <t-form-item
      label="头像"
      name="avatar"
    >
      <t-upload
        accept="image/*"
        action="https://service-bv448zsw-1257786608.gz.apigw.tencentcs.com/api/upload-demo"
        theme="image"
        tips="请选择单张图片文件上传"
      />
    </t-form-item>
    <t-form-item
      style="margin-left: 100px;"
    >
      <t-space
        size="10px"
      >
        <t-button
          theme="primary"
          type="submit"
        >
          提交
        </t-button>
        <t-button
          theme="default"
          type="reset"
          variant="base"
        >
          重置
        </t-button>
      </t-space>
    </t-form-item>
  </t-form>
</t-space>
`;

exports[`Form > Form errorMessageVue demo works fine 1`] = `
<t-space
  data-v-e6f62b80=""
  direction="vertical"
  size="32px"
>
  <t-radio-group
    data-v-e6f62b80=""
    variant="default-filled"
  >
    <t-radio-button
      data-v-e6f62b80=""
      value="default"
    >
      <t-popup
        content="Form.errorMessage 为空，使用组件内置校验信息。重置后，点击提交观察校验结果信息"
        data-v-e6f62b80=""
      >
         使用表单默认校验信息 
      </t-popup>
    </t-radio-button>
    <t-radio-button
      data-v-e6f62b80=""
      value="config"
    >
      <t-popup
        content="统一配置 Form.errorMessage，使用自定义配置的校验信息。重置后，点击提交观察校验结果信息"
        data-v-e6f62b80=""
      >
         表单统一配置校验信息 
      </t-popup>
    </t-radio-button>
  </t-radio-group>
  <t-form
    data="[object Object]"
    data-v-e6f62b80=""
    rules="[object Object]"
    scrolltofirsterror="smooth"
  >
    <t-form-item
      data-v-e6f62b80=""
      help="这是用户名字段帮助说明"
      label="function () { [native code] }"
      name="account"
    >
      <t-input
        data-v-e6f62b80=""
      />
    </t-form-item>
    <t-form-item
      data-v-e6f62b80=""
      help="一句话介绍自己"
      label="个人简介"
      name="description"
    >
      <t-input
        data-v-e6f62b80=""
      />
    </t-form-item>
    <t-form-item
      data-v-e6f62b80=""
      label="密码"
      name="password"
    >
      <t-input
        data-v-e6f62b80=""
        type="password"
      />
    </t-form-item>
    <t-form-item
      data-v-e6f62b80=""
      label="邮箱"
      name="email"
    >
      <t-input
        data-v-e6f62b80=""
      />
    </t-form-item>
    <t-form-item
      data-v-e6f62b80=""
      label="性别"
      name="gender"
    >
      <t-radio-group
        data-v-e6f62b80=""
      >
        <t-radio
          data-v-e6f62b80=""
          value="male"
        >
          男
        </t-radio>
        <t-radio
          data-v-e6f62b80=""
          value="female"
        >
          女
        </t-radio>
      </t-radio-group>
    </t-form-item>
    <t-form-item
      data-v-e6f62b80=""
      label="课程"
      name="course"
    >
      <t-checkbox-group
        data-v-e6f62b80=""
        options="[object Object],[object Object],[object Object],[object Object]"
      />
    </t-form-item>
    <t-form-item
      data-v-e6f62b80=""
      label="学院"
      name="college"
    >
      <t-select
        class="demo-select-base"
        clearable=""
        data-v-e6f62b80=""
      >
        <t-option
          data-v-e6f62b80=""
          label="计算机学院"
          value="1"
        >
           计算机学院 
        </t-option>
        <t-option
          data-v-e6f62b80=""
          label="软件学院"
          value="2"
        >
           软件学院 
        </t-option>
        <t-option
          data-v-e6f62b80=""
          label="物联网学院"
          value="3"
        >
           物联网学院 
        </t-option>
      </t-select>
    </t-form-item>
    <t-form-item
      data-v-e6f62b80=""
      label="入学时间"
      name="date"
      rules="[object Object]"
    >
      <t-input
        data-v-e6f62b80=""
      />
    </t-form-item>
    <t-form-item
      data-v-e6f62b80=""
      label="个人网站"
      name="content.url"
    >
      <t-input
        data-v-e6f62b80=""
      />
    </t-form-item>
    <t-form-item
      data-v-e6f62b80=""
      style="margin-left: 100px;"
    >
      <t-space
        data-v-e6f62b80=""
        size="10px"
      >
        <t-button
          data-v-e6f62b80=""
          theme="primary"
          type="submit"
        >
          提交
        </t-button>
        <t-button
          data-v-e6f62b80=""
          theme="default"
          type="reset"
          variant="base"
        >
          重置
        </t-button>
        <t-button
          data-v-e6f62b80=""
          theme="default"
          variant="base"
        >
          清空校验结果
        </t-button>
      </t-space>
    </t-form-item>
  </t-form>
</t-space>
`;

exports[`Form > Form layoutVue demo works fine 1`] = `
<t-space
  direction="vertical"
  size="32px"
>
  <t-radio-group
    variant="default-filled"
  >
    <t-radio-button
      value="vertical"
    >
      纵向布局
    </t-radio-button>
    <t-radio-button
      value="inline"
    >
      行内布局
    </t-radio-button>
  </t-radio-group>
  <t-form
    data="[object Object]"
    labelwidth="calc(2em + 24px)"
    layout="inline"
    scrolltofirsterror="smooth"
  >
    <t-form-item
      label="名字"
      name="name"
    >
      <t-input />
    </t-form-item>
    <t-form-item
      label="密码"
      name="password"
    >
      <t-input
        type="password"
      />
    </t-form-item>
  </t-form>
</t-space>
`;

exports[`Form > Form loginVue demo works fine 1`] = `
<t-space
  style="width: 350px;"
>
  <t-form
    colon="true"
    data="[object Object]"
    labelwidth="0"
  >
    <t-form-item
      name="account"
    >
      <t-input
        clearable=""
        placeholder="请输入账户名"
      >
        <svg
          class="t-icon t-icon-desktop"
          fill="none"
          height="1em"
          slot="prefix-icon"
          viewBox="0 0 16 16"
          width="1em"
        >
          <path
            d="M2.5 11h5v2H3v1h10v-1H8.5v-2h5a1 1 0 001-1V3a1 1 0 00-1-1h-11a1 1 0 00-1 1v7a1 1 0 001 1zm0-8h11v7h-11V3z"
            fill="currentColor"
            fill-opacity="0.9"
          />
        </svg>
      </t-input>
    </t-form-item>
    <t-form-item
      name="password"
    >
      <t-input
        clearable=""
        placeholder="请输入密码"
        type="password"
      >
        <svg
          class="t-icon t-icon-lock-on"
          fill="none"
          height="1em"
          slot="prefix-icon"
          viewBox="0 0 16 16"
          width="1em"
        >
          <path
            d="M6 10v1h4v-1H6z"
            fill="currentColor"
            fill-opacity="0.9"
          />
          <path
            d="M4.5 5v1H3a.5.5 0 00-.5.5v7c0 .28.22.5.5.5h10a.5.5 0 00.5-.5v-7A.5.5 0 0013 6h-1.5V5a3.5 3.5 0 00-7 0zm6 1h-5V5a2.5 2.5 0 015 0v1zm-7 1h9v6h-9V7z"
            fill="currentColor"
            fill-opacity="0.9"
          />
        </svg>
      </t-input>
    </t-form-item>
    <t-form-item>
      <t-button
        block=""
        theme="primary"
        type="submit"
      >
        登录
      </t-button>
    </t-form-item>
  </t-form>
</t-space>
`;

exports[`Form > Form resetVue demo works fine 1`] = `
<t-space
  direction="vertical"
  size="32px"
>
  <t-radio-group
    variant="default-filled"
  >
    <t-radio-button
      value="empty"
    >
      重置为空
    </t-radio-button>
    <t-radio-button
      value="initial"
    >
      <t-popup
        content="改变表单数据后，点击重置按钮，观察数据重置情况"
      >
         重置为初始值 
      </t-popup>
    </t-radio-button>
  </t-radio-group>
  <t-form
    colon=""
    data="[object Object]"
    resettype="initial"
  >
    <t-form-item
      label="姓名"
      name="name"
    >
      <t-input
        placeholder="请输入内容"
      />
    </t-form-item>
    <t-form-item
      label="手机号码"
      name="tel"
    >
      <t-input
        placeholder="请输入内容"
      />
    </t-form-item>
    <t-form-item
      label="课程"
      name="course"
    >
      <t-checkbox-group
        options="[object Object],[object Object],[object Object]"
      />
    </t-form-item>
    <t-form-item
      style="margin-left: 100px;"
    >
      <t-space
        size="10px"
      >
        <t-button
          theme="primary"
          type="submit"
        >
          提交
        </t-button>
        <t-button
          theme="default"
          type="reset"
          variant="base"
        >
          重置
        </t-button>
        <t-button
          theme="default"
          variant="base"
        >
          只重置手机号码
        </t-button>
      </t-space>
    </t-form-item>
  </t-form>
</t-space>
`;

exports[`Form > Form sizeVue demo works fine 1`] = `
<t-space
  direction="vertical"
  size="32px"
>
  <t-radio-group
    variant="default-filled"
  >
    <t-radio-button
      value="medium"
    >
      中尺寸（默认）
    </t-radio-button>
    <t-radio-button
      value="large"
    >
      大尺寸
    </t-radio-button>
  </t-radio-group>
  <t-form
    data="[object Object]"
    size="medium"
  >
    <t-form-item
      label="姓名"
      name="name"
    >
      <t-input
        placeholder="请输入内容"
      />
    </t-form-item>
    <t-form-item
      label="手机号码"
      name="tel"
    >
      <t-input
        placeholder="请输入内容"
      />
    </t-form-item>
    <t-form-item
      label="接收短信"
      name="status"
    >
      <t-switch />
    </t-form-item>
    <t-form-item
      label="性别"
      name="gender"
    >
      <t-radio-group>
        <t-radio
          value="1"
        >
          男
        </t-radio>
        <t-radio
          value="2"
        >
          女
        </t-radio>
      </t-radio-group>
    </t-form-item>
    <t-form-item
      label="课程"
      name="course"
    >
      <t-checkbox-group
        options="[object Object],[object Object],[object Object]"
      />
    </t-form-item>
    <t-form-item
      style="margin-left: 100px;"
    >
      <t-space
        size="10px"
      >
        <t-button
          theme="primary"
          type="submit"
        >
          提交
        </t-button>
        <t-button
          theme="default"
          type="reset"
          variant="base"
        >
          重置
        </t-button>
      </t-space>
    </t-form-item>
  </t-form>
</t-space>
`;

exports[`Form > Form validateComplicatedDataVue demo works fine 1`] = `
<t-form
  data="[object Object]"
  resettype="initial"
  rules="[object Object]"
  style="max-width: 100%;"
>
  <t-form-item
    label="学校"
    name="school"
  >
    <t-radio-group
      options="[object Object],[object Object],[object Object]"
    />
  </t-form-item>
  <t-tabs
    addable=""
    style="margin-left: 30px;"
    theme="card"
  >
    <t-tab-panel
      label="学生1"
      value="1"
    >
      <t-space
        direction="vertical"
        size="24px"
        style="padding: 24px 24px 24px 0px;"
      >
        <t-form-item
          label="姓名"
          label-width="80"
          name="students[0].name"
        >
          <t-input
            placeholder="请输入内容"
          />
        </t-form-item>
        <t-form-item
          label="选科"
          label-width="80"
          name="students[0].courseType"
        >
          <t-radio-group>
            <t-radio
              value="wenke"
            >
              文科
            </t-radio>
            <t-radio
              value="like"
            >
              理科
            </t-radio>
          </t-radio-group>
        </t-form-item>
        <t-form-item
          label="课程"
          label-width="80"
          name="students[0].course"
        >
          <t-checkbox-group
            options="[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object]"
          />
        </t-form-item>
        <t-form-item
          label-width="80"
          style="margin-left: 100px;"
        >
          <t-space
            size="10px"
          >
            <t-button
              theme="primary"
              type="submit"
            >
              提交
            </t-button>
            <t-button
              theme="default"
              type="reset"
              variant="base"
            >
              重置
            </t-button>
          </t-space>
        </t-form-item>
      </t-space>
    </t-tab-panel>
    <t-tab-panel
      label="学生2"
      value="2"
    >
      <t-space
        direction="vertical"
        size="24px"
        style="padding: 24px 24px 24px 0px;"
      >
        <t-form-item
          label="姓名"
          label-width="80"
          name="students[1].name"
        >
          <t-input
            placeholder="请输入内容"
          />
        </t-form-item>
        <t-form-item
          label="选科"
          label-width="80"
          name="students[1].courseType"
        >
          <t-radio-group>
            <t-radio
              value="wenke"
            >
              文科
            </t-radio>
            <t-radio
              value="like"
            >
              理科
            </t-radio>
          </t-radio-group>
        </t-form-item>
        <t-form-item
          label="课程"
          label-width="80"
          name="students[1].course"
        >
          <t-checkbox-group
            options="[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object]"
          />
        </t-form-item>
        <t-form-item
          label-width="80"
          style="margin-left: 100px;"
        >
          <t-space
            size="10px"
          >
            <t-button
              theme="primary"
              type="submit"
            >
              提交
            </t-button>
            <t-button
              theme="default"
              type="reset"
              variant="base"
            >
              重置
            </t-button>
          </t-space>
        </t-form-item>
      </t-space>
    </t-tab-panel>
  </t-tabs>
</t-form>
`;

exports[`Form > Form validatorVue demo works fine 1`] = `
<t-form
  data="[object Object]"
  data-v-064ce350=""
  rules="[object Object]"
>
  <t-form-item
    data-v-064ce350=""
    help="这是用户名字段帮助说明"
    label="用户名"
    name="account"
  >
    <t-input
      data-v-064ce350=""
    />
  </t-form-item>
  <t-form-item
    data-v-064ce350=""
    label="年龄"
    name="age"
  >
    <t-input-number
      data-v-064ce350=""
      placeholder="年龄"
    />
  </t-form-item>
  <t-form-item
    data-v-064ce350=""
    label="籍贯"
    name="region"
  >
    <t-cascader
      clearable=""
      data-v-064ce350=""
      filterable=""
      options="[object Object],[object Object]"
      placeholder="请选择籍贯"
    />
  </t-form-item>
  <t-form-item
    data-v-064ce350=""
    label="密码"
    name="password"
  >
    <t-input
      data-v-064ce350=""
      type="password"
    />
  </t-form-item>
  <t-form-item
    data-v-064ce350=""
    label="邮箱"
    name="email"
  >
    <t-input
      data-v-064ce350=""
    />
  </t-form-item>
  <t-form-item
    data-v-064ce350=""
    label="性别"
    name="gender"
  >
    <t-radio-group
      data-v-064ce350=""
    >
      <t-radio
        data-v-064ce350=""
        value="male"
      >
        男
      </t-radio>
      <t-radio
        data-v-064ce350=""
        value="female"
      >
        女
      </t-radio>
    </t-radio-group>
  </t-form-item>
  <t-form-item
    data-v-064ce350=""
    label="课程"
    name="course"
  >
    <t-checkbox-group
      data-v-064ce350=""
      options="[object Object],[object Object],[object Object],[object Object]"
    />
  </t-form-item>
  <t-form-item
    data-v-064ce350=""
    label="学院"
    name="college"
  >
    <t-select
      class="demo-select-base"
      clearable=""
      data-v-064ce350=""
      filterable=""
    >
      <t-option
        data-v-064ce350=""
        label="计算机学院"
        value="1"
      >
         计算机学院 
      </t-option>
      <t-option
        data-v-064ce350=""
        label="软件学院"
        value="2"
      >
         软件学院 
      </t-option>
      <t-option
        data-v-064ce350=""
        label="物联网学院"
        value="3"
      >
         物联网学院 
      </t-option>
    </t-select>
  </t-form-item>
  <t-form-item
    data-v-064ce350=""
    label="入学时间"
    name="date"
    rules="[object Object],[object Object]"
  >
    <t-date-picker
      data-v-064ce350=""
    />
  </t-form-item>
  <t-form-item
    data-v-064ce350=""
    label="个人网站"
    name="content.url"
  >
    <t-input
      data-v-064ce350=""
    />
  </t-form-item>
  <t-form-item
    data-v-064ce350=""
    help="一句话介绍自己"
    label="个人简介"
    name="description"
  >
    <t-textarea
      data-v-064ce350=""
    />
  </t-form-item>
  <t-form-item
    data-v-064ce350=""
    label="兴趣爱好"
    name="hobby"
  >
    <t-tree-select
      data="[object Object],[object Object]"
      data-v-064ce350=""
      filterable=""
      placeholder="请选择你的兴趣爱好"
    />
  </t-form-item>
  <t-form-item
    data-v-064ce350=""
    style="margin-left: 100px;"
  >
    <t-space
      data-v-064ce350=""
      size="10px"
    >
      <t-button
        data-v-064ce350=""
        theme="primary"
        type="submit"
      >
        提交
      </t-button>
      <t-button
        data-v-064ce350=""
        theme="default"
        type="reset"
        variant="base"
      >
        重置
      </t-button>
      <t-button
        data-v-064ce350=""
        theme="default"
        variant="base"
      >
        清空校验结果
      </t-button>
    </t-space>
  </t-form-item>
</t-form>
`;
